--- a/sephora_app/package.json
+++ b/sephora_app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "framer-motion": "^7.10.2",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
@@ -44,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "Homepage":"."
+  "homepage": "."
 }
